@@ -6,22 +6,24 @@ import ru.yandex.shop.dto.OrderItemDto;
 import ru.yandex.shop.model.Order;
 import ru.yandex.shop.model.OrderItem;
 
+import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
 public class OrderMapper {
 
-    public OrderDto toDto(Order order) {
+    public OrderDto toDto(Order order, List<OrderItem> items) {
+
         return OrderDto.builder()
                 .id(order.getId())
                 .totalSum(order.getTotalSum())
                 .orderDate(order.getOrderDate())
-                .items(order.getItems()
-                        .stream()
-                        .map(this::toItemDto)
-                        .collect(Collectors.toList()))
+                .items(
+                        items.stream()
+                                .map(this::toItemDto)
+                                .toList()
+                )
                 .build();
-
     }
 
     private OrderItemDto toItemDto(OrderItem item) {
